--- a/prac 1/prac 1.vcxproj
+++ b/prac 1/prac 1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{c5ce79b1-60d1-49c5-b9b0-586a17606250}</ProjectGuid>
     <RootNamespace>prac1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>pract 1</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
